--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pyTelegramBotAPI
-yt-dlp
-openai-whisper
-torch
+pyTelegramBotAPI==4.16.1
+openai==1.61.0
+yt-dlp==2025.1.26
+python-dotenv==1.0.1
+requests==2.31.0
